--- a/base.css
+++ b/base.css
@@ -96,6 +96,9 @@
 
     .piano {
       display: flex;
+      flex-direction: row;
+      /* flex-wrap: wrap; */
+      width: 100vw;
     }
     
     .key {
